# onfire-blackbird

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile.groovy  example_usage.py  pyproject.toml
blackbird/: __init__.py  cli.py  config.py  run.py
blackbird/modules/core/: email.py  username.py
blackbird/modules/export/: csv.py  dump.py  file_operations.py  pdf.py
blackbird/modules/ner/: entity_extraction.py
blackbird/modules/sites/: instagram.py
blackbird/modules/utils/: console.py  file_operations.py  filter.py  hash.py  http_client.py  input.py  parse.py  precheck.py  userAgent.py
blackbird/modules/whatsmyname/: list_operations.py
data/: wmn-data.json
onfire_blackbird/: __init__.py  cli.py  config.py  run.py
onfire_blackbird/modules/core/: email.py  username.py
onfire_blackbird/modules/export/: csv.py  dump.py  file_operations.py  json_output.py  pdf.py
onfire_blackbird/modules/ner/: entity_extraction.py
onfire_blackbird/modules/sites/: instagram.py
onfire_blackbird/modules/utils/: console.py  file_operations.py  filter.py  http_client.py  log.py  parse.py  precheck.py  user_agent.py
onfire_blackbird/modules/whatsmyname/: list_operations.py
tests/: test_core.py  test_export.py
